# B3DB

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pypi_release.yaml
B3DB/: B3DB_antiviral.tsv  B3DB_classification.tsv  B3DB_classification_external.tsv  B3DB_regression.tsv  __init__.py  b3db.py  extended_B3DB_classification.tsv
cleaning/: 01_combine_clean_rest_api_v4.py  03_update_CID.py
data_curation/: README.md
data_curation/cleaning/: 02_clean_smiles_chembl_way_20210215.py
data_curation/grouping/: classification_grouping.py  regression_grouping.py
data_curation/raw_data/R18/: data_formatted_done.xls
data_curation/raw_data/R3/: data_formatted_done.xls
data_curation/raw_data/R31/: data_formatted_done.xls
data_curation/raw_data/R32/: data_formatted_done.xls
data_curation/raw_data/R33/: data_formatted_done.xls
data_curation/raw_data/R35/: data_formatted_done.xls
data_curation/raw_data/R38/: data_formatted_done.xls
data_curation/raw_data/R39/: data_formatted_done.xls
data_curation/raw_data/R43/: data_formatted_done.xls
data_curation/raw_data/R44/: data_formatted_done.xls
data_curation/raw_data/R47/: data_formatted_done.xls
data_curation/raw_data/R48/: data_formatted_done.xls
data_curation/raw_data/R50/: data_formatted_done.xls
data_curation/raw_data/R7/: data_formatted_done.xls
notebooks/: Antiviral_B3DB_drugs.ipynb  PCA_projection.ipynb  PCA_projection_descriptors.ipynb  PCA_projection_fingerprint.ipynb  numerical_data_analysis.ipynb
preprocessing/: combine_clean.py  preprocessing.py
raw_data/R1/: data_formatted_done.xls
raw_data/R11/: data_formatted_done.xls
raw_data/R12/: data_formatted_done.xls
raw_data/R17/: data_formatted_done.xls
raw_data/R2/: data_formatted_done.xls
raw_data/R20/: data_formatted_done.xls
raw_data/R21/: data_formatted_done.xls
raw_data/R22/: data_formatted_done.xls
raw_data/R25/: data_formatted_done.xls
raw_data/R34/: data_formatted_done.xls
raw_data/R4/: data_formatted_done.xls
raw_data/R40/: data_formatted_done.xls
raw_data/R41/: data_formatted_done.xls
raw_data/R42/: data_formatted_done.xls
raw_data/R45/: data_formatted_done.xls
raw_data/R46/: data_formatted_done.xls
raw_data/R49/: data_formatted_done.xls
raw_data/R5/: data_formatted_done.xls
raw_data/R6/: data_formatted_done.xls
raw_data/R8/: data_formatted_done.xls
